# profitabull_backend

./: .gitignore  main.py  pyproject.toml
app/: cli.py  config.py  main.py  utils.py
app/core/: config.py
app/db/: dev.db-shm  dev.db-wal  engine.py  init_db.py  session.py
app/models/: __init__.py  daily_screener_status.py  daily_symbol_snapshot.py  index.py  index_constituent.py  screener.py  screener_event.py  symbol.py
app/nse/: nse.py
app/routers/: dashboard.py  indices.py  screeners.py  webhooks.py
app/schemas/: chartink.py
app/scripts/: load_index_from_csv.py  nse_snapshot_ingestion.py
resources/: ind_nifty50list.csv
